--- a/XEEnglish/ExpendCalss/Setting/ExpendRecord/ExpendRecordCell.xib
+++ b/XEEnglish/ExpendCalss/Setting/ExpendRecord/ExpendRecordCell.xib
@@ -145,9 +145,34 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q7Y-bo-rhe">
+                        <rect key="frame" x="210" y="5" width="40" height="25"/>
+                        <color key="backgroundColor" red="1" green="0.48263922009999999" blue="0.1546600128" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <state key="normal" title="取 消">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="cannelBtnClicked:" destination="DKU-1m-f7Q" eventType="touchUpInside" id="boY-Pr-Exx"/>
+                        </connections>
+                    </button>
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qy-Cd-ddx">
+                        <rect key="frame" x="255" y="5" width="40" height="25"/>
+                        <color key="backgroundColor" red="1" green="0.48263922009999999" blue="0.1546600128" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <state key="normal" title="支 付">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="payBtnClicked:" destination="DKU-1m-f7Q" eventType="touchUpInside" id="rA9-p5-YK7"/>
+                        </connections>
+                    </button>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="cannelBtn" destination="Q7Y-bo-rhe" id="UYn-2B-WJ5"/>
                 <outlet property="expendRecordCoupons" destination="uCe-ju-cPC" id="uSo-Ed-1ZN"/>
                 <outlet property="expendRecordCourseName" destination="1PL-ae-9EX" id="umg-vK-ghI"/>
                 <outlet property="expendRecordCoursePrice" destination="vA5-yx-48u" id="qOE-Uh-GOl"/>
@@ -159,6 +184,7 @@
                 <outlet property="expendRecordStatue" destination="4Mq-CP-jMi" id="gaW-EZ-cPh"/>
                 <outlet property="expendRecordTradeNo" destination="tkA-bH-IRz" id="Ivk-WA-yz8"/>
                 <outlet property="expendRecordTradeType" destination="hJa-tX-eLf" id="RcD-CR-ffP"/>
+                <outlet property="payBtn" destination="4qy-Cd-ddx" id="4Oh-1n-ORy"/>
             </connections>
             <point key="canvasLocation" x="381" y="281"/>
         </tableViewCell>
